bug: Update package.json for vulnerability fix

--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "neighborhood-map",
+  "homepage": "https://amyfrieson.com/neighborhood-map/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "merge": ">=1.2.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "babel-plugin-styled-components": "^1.8.0",
+    "merge": ">=1.2.1"
   }
 }
